# go2_jump

./: .dockerignore  .gitignore  README.md  README.zh-CN.md  algorithm.md  algorithm.zh-CN.md
docker/: Dockerfile.humble
docs/: architecture.md  architecture.zh-CN.md  calibration_workflow.md  calibration_workflow.zh-CN.md  control_stack.md  control_stack.zh-CN.md  research_program.md  research_program.zh-CN.md
patches/unitree_mujoco/: 0001-go2-mpc-bridge-base.patch
scripts/: airborne_priority_params.sh  apply_local_patches.sh  bootstrap_third_party.sh  bootstrap_workspace_repo.sh  container_prepare_mujoco.sh  container_prepare_unitree_sdk2.sh  container_source_env.sh  docker_build_image.sh  docker_build_workspace.sh  docker_launch_jump_mpc.sh  docker_launch_jump_stack.sh  docker_run_go2_mujoco.sh  docker_run_jump_batch.sh  docker_run_single_jump_trial.sh  docker_smoke_test_stack.sh  evaluate_airborne_generalization.sh  jump_launch_args.sh  record_jump_trial.py  run_airborne_priority_trial.sh  summarize_jump_trials.py  sweep_airborne_push_pitch.sh
src/go2_jump_bringup/config/: jump_params.yaml  mpc_params.yaml
src/go2_jump_bringup/launch/: sim_jump.launch.py  sim_jump_mpc.launch.py
src/go2_jump_controller/src/: jump_controller_node.cpp
src/go2_jump_core/: CMakeLists.txt  package.xml
src/go2_jump_core/include/go2_jump_core/: jump_task.hpp
src/go2_jump_core/src/: jump_task.cpp  jump_task_node.cpp
src/go2_jump_mpc/: CMakeLists.txt  package.xml
src/go2_jump_mpc/include/go2_jump_mpc/: unitree_crc.hpp  whole_body_mpc.hpp
src/go2_jump_mpc/src/: unitree_crc.cpp  whole_body_mpc.cpp  whole_body_mpc_node.cpp
src/go2_jump_msgs/: CMakeLists.txt  package.xml
src/go2_jump_msgs/msg/: JumpControllerState.msg  JumpIntent.msg  JumpTask.msg
src/go2_jump_planner/: CMakeLists.txt  package.xml
src/go2_jump_planner/include/go2_jump_planner/: jump_plan.hpp
src/go2_jump_planner/src/: jump_intent_node.cpp  jump_plan.cpp  jump_target_node.cpp
