<?xml version="1.0"?>
<package format="3">
  <name>go2_jump_mpc</name>
  <version>0.1.0</version>
  <description>MuJoCo-native whole-body MPC mainline for the Go2 jump project.</description>
  <maintainer email="hayan@example.com">hayan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>go2_jump_core</depend>
  <depend>go2_jump_msgs</depend>
  <depend>rclcpp</depend>
  <depend>unitree_go</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
