<?xml version="1.0"?>
<package format="3">
  <name>go2_jump_msgs</name>
  <version>0.1.0</version>
  <description>ROS 2 interfaces for the Go2 jump MPC stack.</description>
  <maintainer email="hayan@example.com">hayan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
